# zotero-driver

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  config.example.yaml  pyproject.toml  taxonomy.example.yaml
.claude/skills/zelador-intake/: SKILL.md
.claude/skills/zelador-review/: SKILL.md
.claude/skills/zelador-setup/: SKILL.md
.claude/skills/zelador-taxonomy/: SKILL.md
tests/: conftest.py  test_apply.py  test_audit_checks.py  test_audit_citations.py  test_audit_conformance.py  test_audit_runner.py  test_backup.py  test_changelog.py  test_citekeys.py  test_cli_audit.py  test_cli_change.py  test_cli_local.py  test_cli_lookup.py  test_cli_read.py  test_cli_status_backup.py  test_client.py  test_client_write.py  test_config.py  test_contracts.py  test_expand.py  test_expand_citekeys.py  test_golden_plan.py  test_local.py  test_lookup_fulltext.py  test_lookup_sources.py  test_recover.py  test_taxonomy.py  test_undo.py
tests/golden/: changeset.json  plan.json
zelador/: backup.py  citekeys.py  cli.py  cli_change.py  cli_lookup.py  client.py  config.py  local.py  output.py  status.py  taxonomy.py
zelador/audit/: citations.py  completeness.py  conformance.py  duplicates.py  hygiene.py  library.py  report.py  runner.py  tagmess.py
zelador/lookup/: __init__.py  cache.py  fulltext.py  sources.py
zelador/write/: __init__.py  apply.py  changelog.py  contracts.py  expand.py  library_state.py  recover.py  undo.py
