[project]
name = "zelador"
version = "0.1.0"
description = "Deterministic CLI caretaker for a personal Zotero library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "platformdirs>=4",
    "python-dotenv>=1",
    "pyyaml>=6",
    "typer>=0.16",
]

[project.scripts]
zel = "zelador.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
